src/objects/ENC_Respuesta_Tipo__c.object
<CustomObject>
    <description>Representa las posibles respuestas de cada una de las preguntas de una Encuesta Tipo, determinando para cada respuesta cuál es la pregunta siguiente.</description>
    <fields>
        <fullName>ENRT_FOR_Tipo_Respuesta__c</fullName>
        <description>Valor API del Tipo Visual de la respuesta determinado por la pregunta padre.</description>
        <formula>TEXT(ENRT_LKP_Pregunta__r.ENP_SEL_Tipo_Respuesta__c)</formula>
        <label>Tipo de Respuesta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENRT_LKP_PreguntaDestino__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Pregunta siguiente en la encuesta tipo tras utilizar la respuesta tipo.</description>
        <label>Pregunta Destino</label>
        <referenceTo>ENC_Pregunta__c</referenceTo>
        <relationshipLabel>Respuestas Origen</relationshipLabel>
        <relationshipName>RespuestasTipoOrigen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENRT_LKP_Pregunta__c</fullName>
        <description>Pregunta a la que pertenece la respuesta tipo.</description>
        <label>Pregunta</label>
        <referenceTo>ENC_Pregunta__c</referenceTo>
        <relationshipLabel>Respuestas Posibles</relationshipLabel>
        <relationshipName>RespuestasTipo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ENRT_NUM_Ordenacion__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Número de orden para visualizar la respuesta en el caso de que el tipo visual de la pregunta determine que tiene varias respuestas posibles.</description>
        <label>Ordenación</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENRT_TXT_Valor__c</fullName>
        <description>Valor correspondiente a la respuesta:
a) Si el Tipo Visual es &quot;Check&quot;: Valor Sí o valor No
b) Si el Tipo Visual es &quot;RadioButton&quot;, &quot;Picklist&quot;, &quot;Multipicklist&quot;: Valor de la opción disponible para ser seleccionada.
c) Si el Tipo Visual es &quot;Texto&quot;, &quot;Número&quot;: Vacío ya que el valor es libre.</description>
        <label>Valor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Encuesta Tipo: Respuesta</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encuestas Tipo: Respuesta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>